tests/NormalTests/paczka1/fuzzy1/55514440.err
Error in line 5: JQgwp0iSTaG A185 31,4
Error in line 27: JQgwp0iSTaG A680 30,1
